--- a/conf/tallycheck.properties
+++ b/conf/tallycheck.properties
@@ -1,10 +1,13 @@
 test.db.mongo.host=192.168.99.100
 test.db.mongo.port=9017
 
+tallycheck.db.mongo.host=192.168.99.100
+tallycheck.db.mongo.port=9017
+
+tallyadmin.db.mongo.host=192.168.99.100
+tallyadmin.db.mongo.port=9017
+
 tallyuser.standard.password.encoder.secret=Kp439dqZHp8WEndgl3hqlA6hK2vJCi
 tallyuser.db.mongo.host=192.168.99.100
 tallyuser.db.mongo.port=9017
-
-tallycheck.db.mongo.host=192.168.99.100
-tallycheck.db.mongo.port=9017
 
